// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`factorial graph 1`] = `
<svg
  height={554}
  width={364.5}
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    transform="scale(1) translate(1 1)"
  >
    <g>
      <g
        transform="translate(20 25)"
      >
        <rect
          fillOpacity={0}
          height={504}
          stroke="#000"
          strokeDasharray="10 5"
          strokeOpacity={0.5}
          strokeWidth={1}
          transform="translate(0.5 0.5)"
          width={324.5}
        />
        <text
          alignmentBaseline="hanging"
          fill={null}
          fontFamily="sans-serif"
          fontSize={14}
          opacity={0.5}
          x={5}
          y={5}
        >
          main
        </text>
        <g>
          <path
            d="M 143.5 48 L 143.5 58"
            fill="none"
            opacity={0.8}
            stroke="#333333"
            strokeWidth={3}
          />
          <path
            d="M0,0 L0,3 L3,1.5 L0,0"
            fill="#333333"
            opacity={0.8}
            strokeWidth={3}
            transform="translate(148 58) rotate(90) scale(3)"
          />
        </g>
        <g>
          <path
            d="M 196 378 L 196 388"
            fill="none"
            opacity={0.8}
            stroke="#333333"
            strokeWidth={3}
          />
          <path
            d="M0,0 L0,3 L3,1.5 L0,0"
            fill="#333333"
            opacity={0.8}
            strokeWidth={3}
            transform="translate(200.5 388) rotate(90) scale(3)"
          />
        </g>
        <g>
          <path
            d="M 196 431 L 196 441"
            fill="none"
            opacity={0.8}
            stroke="#333333"
            strokeWidth={3}
          />
          <path
            d="M0,0 L0,3 L3,1.5 L0,0"
            fill="#333333"
            opacity={0.8}
            strokeWidth={3}
            transform="translate(200.5 441) rotate(90) scale(3)"
          />
        </g>
        <g>
          <path
            d="M 22.5 0 L 22.5 441 L 181 441 L 181 441"
            fill="none"
            opacity={0.8}
            stroke="#333333"
            strokeWidth={3}
          />
          <path
            d="M0,0 L0,3 L3,1.5 L0,0"
            fill="#333333"
            opacity={0.8}
            strokeWidth={3}
            transform="translate(185.5 441) rotate(90) scale(3)"
          />
        </g>
        <g>
          <path
            d="M 188.5 484 L 188.5 494"
            fill="none"
            opacity={0.8}
            stroke="#333333"
            strokeWidth={3}
          />
          <path
            d="M0,0 L0,3 L3,1.5 L0,0"
            fill="#333333"
            opacity={0.8}
            strokeWidth={3}
            transform="translate(193 494) rotate(90) scale(3)"
          />
        </g>
        <rect
          fill="white"
          height={5}
          stroke="#000"
          width={5}
          x={20}
          y={-5}
        />
        <rect
          fill="black"
          height={5}
          stroke="#000"
          width={5}
          x={186}
          y={504}
        />
        <g
          transform="translate(166 456)"
        >
          <rect
            fill="#fff"
            height={23}
            stroke="#000"
            strokeWidth={3}
            width={45}
          />
          <text
            alignmentBaseline="central"
            fill={null}
            fontFamily="sans-serif"
            fontSize={14}
            textAnchor="middle"
            x={22.5}
            y={11.5}
          >
            print
          </text>
          <rect
            fill="white"
            height={5}
            stroke="#000"
            width={5}
            x={27.5}
            y={-5}
          />
          <rect
            fill="white"
            height={5}
            stroke="#000"
            width={5}
            x={12.5}
            y={-5}
          />
          <rect
            fill="black"
            height={5}
            stroke="#000"
            width={5}
            x={20}
            y={23}
          />
        </g>
        <g
          transform="translate(166 403)"
        >
          <rect
            fill="#fff"
            height={23}
            stroke="#000"
            strokeWidth={3}
            width={60}
          />
          <text
            alignmentBaseline="central"
            fill={null}
            fontFamily="sans-serif"
            fontSize={14}
            textAnchor="middle"
            x={30}
            y={11.5}
          >
            numToStr
          </text>
          <rect
            fill="white"
            height={5}
            stroke="#000"
            width={5}
            x={27.5}
            y={-5}
          />
          <rect
            fill="black"
            height={5}
            stroke="#000"
            width={5}
            x={27.5}
            y={23}
          />
        </g>
        <g
          transform="translate(111 20)"
        >
          <rect
            fill="#fff"
            height={23}
            stroke="#000"
            strokeWidth={3}
            width={65}
          />
          <text
            alignmentBaseline="central"
            fill={null}
            fontFamily="sans-serif"
            fontSize={14}
            textAnchor="middle"
            x={32.5}
            y={11.5}
          >
            std/const
          </text>
          <rect
            fill="black"
            height={5}
            stroke="#000"
            width={5}
            x={30}
            y={23}
          />
        </g>
        <g
          transform="translate(38.5 73)"
        >
          <rect
            fillOpacity={0}
            height={300}
            stroke="#000"
            strokeDasharray="10 5"
            strokeOpacity={0.5}
            strokeWidth={1}
            transform="translate(0.5 0.5)"
            width={266}
          />
          <text
            alignmentBaseline="hanging"
            fill={null}
            fontFamily="sans-serif"
            fontSize={14}
            opacity={0.5}
            x={5}
            y={5}
          >
            fac
          </text>
          <g>
            <path
              d="M 105 0 L 105 30 L 245 30 L 245 78 L 212.5 78 L 212.5 78"
              fill="none"
              opacity={0.8}
              stroke="#333333"
              strokeWidth={3}
            />
            <path
              d="M0,0 L0,3 L3,1.5 L0,0"
              fill="#333333"
              opacity={0.8}
              strokeWidth={3}
              transform="translate(217 78) rotate(90) scale(3)"
            />
          </g>
          <g>
            <path
              d="M 197.5 68 L 197.5 78"
              fill="none"
              opacity={0.8}
              stroke="#333333"
              strokeWidth={3}
            />
            <path
              d="M0,0 L0,3 L3,1.5 L0,0"
              fill="#333333"
              opacity={0.8}
              strokeWidth={3}
              transform="translate(202 78) rotate(90) scale(3)"
            />
          </g>
          <g>
            <path
              d="M 205 121 L 205 237 L 167 237 L 167 237"
              fill="none"
              opacity={0.8}
              stroke="#333333"
              strokeWidth={3}
            />
            <path
              d="M0,0 L0,3 L3,1.5 L0,0"
              fill="#333333"
              opacity={0.8}
              strokeWidth={3}
              transform="translate(171.5 237) rotate(90) scale(3)"
            />
          </g>
          <g>
            <path
              d="M 157.5 227 L 157.5 237"
              fill="none"
              opacity={0.8}
              stroke="#333333"
              strokeWidth={3}
            />
            <path
              d="M0,0 L0,3 L3,1.5 L0,0"
              fill="#333333"
              opacity={0.8}
              strokeWidth={3}
              transform="translate(162 237) rotate(90) scale(3)"
            />
          </g>
          <g>
            <path
              d="M 105 0 L 105 184 L 75 184 L 75 184"
              fill="none"
              opacity={0.8}
              stroke="#333333"
              strokeWidth={3}
            />
            <path
              d="M0,0 L0,3 L3,1.5 L0,0"
              fill="#333333"
              opacity={0.8}
              strokeWidth={3}
              transform="translate(79.5 184) rotate(90) scale(3)"
            />
          </g>
          <g>
            <path
              d="M 105 0 L 105 78 L 67.5 78 L 67.5 78"
              fill="none"
              opacity={0.8}
              stroke="#333333"
              strokeWidth={3}
            />
            <path
              d="M0,0 L0,3 L3,1.5 L0,0"
              fill="#333333"
              opacity={0.8}
              strokeWidth={3}
              transform="translate(72 78) rotate(90) scale(3)"
            />
          </g>
          <g>
            <path
              d="M 52.5 68 L 52.5 78"
              fill="none"
              opacity={0.8}
              stroke="#333333"
              strokeWidth={3}
            />
            <path
              d="M0,0 L0,3 L3,1.5 L0,0"
              fill="#333333"
              opacity={0.8}
              strokeWidth={3}
              transform="translate(57 78) rotate(90) scale(3)"
            />
          </g>
          <g>
            <path
              d="M 60 121 L 60 131"
              fill="none"
              opacity={0.8}
              stroke="#333333"
              strokeWidth={3}
            />
            <path
              d="M0,0 L0,3 L3,1.5 L0,0"
              fill="#333333"
              opacity={0.8}
              strokeWidth={3}
              transform="translate(64.5 131) rotate(90) scale(3)"
            />
          </g>
          <g>
            <path
              d="M 60 174 L 60 184"
              fill="none"
              opacity={0.8}
              stroke="#333333"
              strokeWidth={3}
            />
            <path
              d="M0,0 L0,3 L3,1.5 L0,0"
              fill="#333333"
              opacity={0.8}
              strokeWidth={3}
              transform="translate(64.5 184) rotate(90) scale(3)"
            />
          </g>
          <g>
            <path
              d="M 67.5 227 L 67.5 237 L 148 237 L 148 237"
              fill="none"
              opacity={0.8}
              stroke="#333333"
              strokeWidth={3}
            />
            <path
              d="M0,0 L0,3 L3,1.5 L0,0"
              fill="#333333"
              opacity={0.8}
              strokeWidth={3}
              transform="translate(152.5 237) rotate(90) scale(3)"
            />
          </g>
          <g>
            <path
              d="M 157.5 280 L 157.5 290"
              fill="none"
              opacity={0.8}
              stroke="#333333"
              strokeWidth={3}
            />
            <path
              d="M0,0 L0,3 L3,1.5 L0,0"
              fill="#333333"
              opacity={0.8}
              strokeWidth={3}
              transform="translate(162 290) rotate(90) scale(3)"
            />
          </g>
          <rect
            fill="white"
            height={5}
            stroke="#000"
            width={5}
            x={102.5}
            y={-5}
          />
          <rect
            fill="black"
            height={5}
            stroke="#000"
            width={5}
            x={155}
            y={300}
          />
          <g
            transform="translate(142.5 252)"
          >
            <rect
              fill="#fff"
              height={23}
              stroke="#000"
              strokeWidth={3}
              width={30}
            />
            <text
              alignmentBaseline="central"
              fill={null}
              fontFamily="sans-serif"
              fontSize={14}
              textAnchor="middle"
              x={15}
              y={11.5}
            >
              if
            </text>
            <rect
              fill="white"
              height={5}
              stroke="#000"
              width={5}
              x={22}
              y={-5}
            />
            <rect
              fill="white"
              height={5}
              stroke="#000"
              width={5}
              x={12.5}
              y={-5}
            />
            <rect
              fill="white"
              height={5}
              stroke="#000"
              width={5}
              x={3}
              y={-5}
            />
            <rect
              fill="black"
              height={5}
              stroke="#000"
              width={5}
              x={12.5}
              y={23}
            />
          </g>
          <g
            transform="translate(172.5 93)"
          >
            <rect
              fill="#fff"
              height={23}
              stroke="#000"
              strokeWidth={3}
              width={65}
            />
            <text
              alignmentBaseline="central"
              fill={null}
              fontFamily="sans-serif"
              fontSize={14}
              textAnchor="middle"
              x={32.5}
              y={11.5}
            >
              math/less
            </text>
            <rect
              fill="white"
              height={5}
              stroke="#000"
              width={5}
              x={37.5}
              y={-5}
            />
            <rect
              fill="white"
              height={5}
              stroke="#000"
              width={5}
              x={22.5}
              y={-5}
            />
            <rect
              fill="black"
              height={5}
              stroke="#000"
              width={5}
              x={30}
              y={23}
            />
          </g>
          <g
            transform="translate(165 40)"
          >
            <rect
              fill="#fff"
              height={23}
              stroke="#000"
              strokeWidth={3}
              width={65}
            />
            <text
              alignmentBaseline="central"
              fill={null}
              fontFamily="sans-serif"
              fontSize={14}
              textAnchor="middle"
              x={32.5}
              y={11.5}
            >
              std/const
            </text>
            <rect
              fill="black"
              height={5}
              stroke="#000"
              width={5}
              x={30}
              y={23}
            />
          </g>
          <g
            transform="translate(125 199)"
          >
            <rect
              fill="#fff"
              height={23}
              stroke="#000"
              strokeWidth={3}
              width={65}
            />
            <text
              alignmentBaseline="central"
              fill={null}
              fontFamily="sans-serif"
              fontSize={14}
              textAnchor="middle"
              x={32.5}
              y={11.5}
            >
              std/const
            </text>
            <rect
              fill="black"
              height={5}
              stroke="#000"
              width={5}
              x={30}
              y={23}
            />
          </g>
          <g
            transform="translate(25 199)"
          >
            <rect
              fill="#fff"
              height={23}
              stroke="#000"
              strokeWidth={3}
              width={85}
            />
            <text
              alignmentBaseline="central"
              fill={null}
              fontFamily="sans-serif"
              fontSize={14}
              textAnchor="middle"
              x={42.5}
              y={11.5}
            >
              math/multiply
            </text>
            <rect
              fill="white"
              height={5}
              stroke="#000"
              width={5}
              x={47.5}
              y={-5}
            />
            <rect
              fill="white"
              height={5}
              stroke="#000"
              width={5}
              x={32.5}
              y={-5}
            />
            <rect
              fill="black"
              height={5}
              stroke="#000"
              width={5}
              x={40}
              y={23}
            />
          </g>
          <g
            transform="translate(42.5 146)"
          >
            <rect
              fill="#fff"
              height={23}
              stroke="#000"
              strokeWidth={3}
              width={35}
            />
            <text
              alignmentBaseline="central"
              fill={null}
              fontFamily="sans-serif"
              fontSize={14}
              textAnchor="middle"
              x={17.5}
              y={11.5}
            >
              fac
            </text>
            <rect
              fill="white"
              height={5}
              stroke="#000"
              width={5}
              x={15}
              y={-5}
            />
            <rect
              fill="black"
              height={5}
              stroke="#000"
              width={5}
              x={15}
              y={23}
            />
          </g>
          <g
            transform="translate(30 93)"
          >
            <rect
              fill="#fff"
              height={23}
              stroke="#000"
              strokeWidth={3}
              width={60}
            />
            <text
              alignmentBaseline="central"
              fill={null}
              fontFamily="sans-serif"
              fontSize={14}
              textAnchor="middle"
              x={30}
              y={11.5}
            >
              math/add
            </text>
            <rect
              fill="white"
              height={5}
              stroke="#000"
              width={5}
              x={35}
              y={-5}
            />
            <rect
              fill="white"
              height={5}
              stroke="#000"
              width={5}
              x={20}
              y={-5}
            />
            <rect
              fill="black"
              height={5}
              stroke="#000"
              width={5}
              x={27.5}
              y={23}
            />
          </g>
          <g
            transform="translate(20 40)"
          >
            <rect
              fill="#fff"
              height={23}
              stroke="#000"
              strokeWidth={3}
              width={65}
            />
            <text
              alignmentBaseline="central"
              fill={null}
              fontFamily="sans-serif"
              fontSize={14}
              textAnchor="middle"
              x={32.5}
              y={11.5}
            >
              std/const
            </text>
            <rect
              fill="black"
              height={5}
              stroke="#000"
              width={5}
              x={30}
              y={23}
            />
          </g>
        </g>
      </g>
    </g>
  </g>
</svg>
`;

exports[`factorial with highlighted nodes 1`] = `
<svg
  height={554}
  width={364.5}
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    transform="scale(1) translate(1 1)"
  >
    <g>
      <g
        transform="translate(20 25)"
      >
        <rect
          fillOpacity={0}
          height={504}
          stroke="#000"
          strokeDasharray="10 5"
          strokeOpacity={0.5}
          strokeWidth={1}
          transform="translate(0.5 0.5)"
          width={324.5}
        />
        <text
          alignmentBaseline="hanging"
          fill={null}
          fontFamily="sans-serif"
          fontSize={14}
          opacity={0.5}
          x={5}
          y={5}
        >
          main
        </text>
        <g>
          <path
            d="M 143.5 48 L 143.5 58"
            fill="none"
            opacity={0.8}
            stroke="#333333"
            strokeWidth={3}
          />
          <path
            d="M0,0 L0,3 L3,1.5 L0,0"
            fill="#333333"
            opacity={0.8}
            strokeWidth={3}
            transform="translate(148 58) rotate(90) scale(3)"
          />
        </g>
        <g>
          <path
            d="M 196 378 L 196 388"
            fill="none"
            opacity={0.8}
            stroke="#333333"
            strokeWidth={3}
          />
          <path
            d="M0,0 L0,3 L3,1.5 L0,0"
            fill="#333333"
            opacity={0.8}
            strokeWidth={3}
            transform="translate(200.5 388) rotate(90) scale(3)"
          />
        </g>
        <g>
          <path
            d="M 196 431 L 196 441"
            fill="none"
            opacity={0.8}
            stroke="#333333"
            strokeWidth={3}
          />
          <path
            d="M0,0 L0,3 L3,1.5 L0,0"
            fill="#333333"
            opacity={0.8}
            strokeWidth={3}
            transform="translate(200.5 441) rotate(90) scale(3)"
          />
        </g>
        <g>
          <path
            d="M 22.5 0 L 22.5 441 L 181 441 L 181 441"
            fill="none"
            opacity={0.8}
            stroke="#333333"
            strokeWidth={3}
          />
          <path
            d="M0,0 L0,3 L3,1.5 L0,0"
            fill="#333333"
            opacity={0.8}
            strokeWidth={3}
            transform="translate(185.5 441) rotate(90) scale(3)"
          />
        </g>
        <g>
          <path
            d="M 188.5 484 L 188.5 494"
            fill="none"
            opacity={0.8}
            stroke="#333333"
            strokeWidth={3}
          />
          <path
            d="M0,0 L0,3 L3,1.5 L0,0"
            fill="#333333"
            opacity={0.8}
            strokeWidth={3}
            transform="translate(193 494) rotate(90) scale(3)"
          />
        </g>
        <rect
          fill="white"
          height={5}
          stroke="#000"
          width={5}
          x={20}
          y={-5}
        />
        <rect
          fill="black"
          height={5}
          stroke="#000"
          width={5}
          x={186}
          y={504}
        />
        <g
          transform="translate(166 456)"
        >
          <rect
            fill="#fff"
            height={23}
            stroke="#000"
            strokeWidth={3}
            width={45}
          />
          <text
            alignmentBaseline="central"
            fill={null}
            fontFamily="sans-serif"
            fontSize={14}
            textAnchor="middle"
            x={22.5}
            y={11.5}
          >
            print
          </text>
          <rect
            fill="white"
            height={5}
            stroke="#000"
            width={5}
            x={27.5}
            y={-5}
          />
          <rect
            fill="white"
            height={5}
            stroke="#000"
            width={5}
            x={12.5}
            y={-5}
          />
          <rect
            fill="black"
            height={5}
            stroke="#000"
            width={5}
            x={20}
            y={23}
          />
        </g>
        <g
          transform="translate(166 403)"
        >
          <rect
            fill="#fff"
            height={23}
            stroke="#000"
            strokeWidth={3}
            width={60}
          />
          <text
            alignmentBaseline="central"
            fill={null}
            fontFamily="sans-serif"
            fontSize={14}
            textAnchor="middle"
            x={30}
            y={11.5}
          >
            numToStr
          </text>
          <rect
            fill="white"
            height={5}
            stroke="#000"
            width={5}
            x={27.5}
            y={-5}
          />
          <rect
            fill="black"
            height={5}
            stroke="#000"
            width={5}
            x={27.5}
            y={23}
          />
        </g>
        <g
          transform="translate(111 20)"
        >
          <rect
            fill="#fff"
            height={23}
            stroke="#000"
            strokeWidth={3}
            width={65}
          />
          <text
            alignmentBaseline="central"
            fill={null}
            fontFamily="sans-serif"
            fontSize={14}
            textAnchor="middle"
            x={32.5}
            y={11.5}
          >
            std/const
          </text>
          <rect
            fill="black"
            height={5}
            stroke="#000"
            width={5}
            x={30}
            y={23}
          />
        </g>
        <g
          transform="translate(38.5 73)"
        >
          <rect
            fillOpacity={0}
            height={300}
            stroke="red"
            strokeDasharray="10 5"
            strokeOpacity={0.5}
            strokeWidth={1}
            transform="translate(0.5 0.5)"
            width={266}
          />
          <text
            alignmentBaseline="hanging"
            fill="red"
            fontFamily="sans-serif"
            fontSize={14}
            opacity={0.5}
            x={5}
            y={5}
          >
            fac
          </text>
          <g>
            <path
              d="M 105 0 L 105 30 L 245 30 L 245 78 L 212.5 78 L 212.5 78"
              fill="none"
              opacity={0.8}
              stroke="#333333"
              strokeWidth={3}
            />
            <path
              d="M0,0 L0,3 L3,1.5 L0,0"
              fill="#333333"
              opacity={0.8}
              strokeWidth={3}
              transform="translate(217 78) rotate(90) scale(3)"
            />
          </g>
          <g>
            <path
              d="M 197.5 68 L 197.5 78"
              fill="none"
              opacity={0.8}
              stroke="#333333"
              strokeWidth={3}
            />
            <path
              d="M0,0 L0,3 L3,1.5 L0,0"
              fill="#333333"
              opacity={0.8}
              strokeWidth={3}
              transform="translate(202 78) rotate(90) scale(3)"
            />
          </g>
          <g>
            <path
              d="M 205 121 L 205 237 L 167 237 L 167 237"
              fill="none"
              opacity={0.8}
              stroke="#333333"
              strokeWidth={3}
            />
            <path
              d="M0,0 L0,3 L3,1.5 L0,0"
              fill="#333333"
              opacity={0.8}
              strokeWidth={3}
              transform="translate(171.5 237) rotate(90) scale(3)"
            />
          </g>
          <g>
            <path
              d="M 157.5 227 L 157.5 237"
              fill="none"
              opacity={0.8}
              stroke="#333333"
              strokeWidth={3}
            />
            <path
              d="M0,0 L0,3 L3,1.5 L0,0"
              fill="#333333"
              opacity={0.8}
              strokeWidth={3}
              transform="translate(162 237) rotate(90) scale(3)"
            />
          </g>
          <g>
            <path
              d="M 105 0 L 105 184 L 75 184 L 75 184"
              fill="none"
              opacity={0.8}
              stroke="#333333"
              strokeWidth={3}
            />
            <path
              d="M0,0 L0,3 L3,1.5 L0,0"
              fill="#333333"
              opacity={0.8}
              strokeWidth={3}
              transform="translate(79.5 184) rotate(90) scale(3)"
            />
          </g>
          <g>
            <path
              d="M 105 0 L 105 78 L 67.5 78 L 67.5 78"
              fill="none"
              opacity={0.8}
              stroke="#333333"
              strokeWidth={3}
            />
            <path
              d="M0,0 L0,3 L3,1.5 L0,0"
              fill="#333333"
              opacity={0.8}
              strokeWidth={3}
              transform="translate(72 78) rotate(90) scale(3)"
            />
          </g>
          <g>
            <path
              d="M 52.5 68 L 52.5 78"
              fill="none"
              opacity={0.8}
              stroke="#333333"
              strokeWidth={3}
            />
            <path
              d="M0,0 L0,3 L3,1.5 L0,0"
              fill="#333333"
              opacity={0.8}
              strokeWidth={3}
              transform="translate(57 78) rotate(90) scale(3)"
            />
          </g>
          <g>
            <path
              d="M 60 121 L 60 131"
              fill="none"
              opacity={0.8}
              stroke="#333333"
              strokeWidth={3}
            />
            <path
              d="M0,0 L0,3 L3,1.5 L0,0"
              fill="#333333"
              opacity={0.8}
              strokeWidth={3}
              transform="translate(64.5 131) rotate(90) scale(3)"
            />
          </g>
          <g>
            <path
              d="M 60 174 L 60 184"
              fill="none"
              opacity={0.8}
              stroke="#333333"
              strokeWidth={3}
            />
            <path
              d="M0,0 L0,3 L3,1.5 L0,0"
              fill="#333333"
              opacity={0.8}
              strokeWidth={3}
              transform="translate(64.5 184) rotate(90) scale(3)"
            />
          </g>
          <g>
            <path
              d="M 67.5 227 L 67.5 237 L 148 237 L 148 237"
              fill="none"
              opacity={0.8}
              stroke="#333333"
              strokeWidth={3}
            />
            <path
              d="M0,0 L0,3 L3,1.5 L0,0"
              fill="#333333"
              opacity={0.8}
              strokeWidth={3}
              transform="translate(152.5 237) rotate(90) scale(3)"
            />
          </g>
          <g>
            <path
              d="M 157.5 280 L 157.5 290"
              fill="none"
              opacity={0.8}
              stroke="#333333"
              strokeWidth={3}
            />
            <path
              d="M0,0 L0,3 L3,1.5 L0,0"
              fill="#333333"
              opacity={0.8}
              strokeWidth={3}
              transform="translate(162 290) rotate(90) scale(3)"
            />
          </g>
          <rect
            fill="white"
            height={5}
            stroke="#000"
            width={5}
            x={102.5}
            y={-5}
          />
          <rect
            fill="black"
            height={5}
            stroke="#000"
            width={5}
            x={155}
            y={300}
          />
          <g
            transform="translate(142.5 252)"
          >
            <rect
              fill="#fff"
              height={23}
              stroke="#000"
              strokeWidth={3}
              width={30}
            />
            <text
              alignmentBaseline="central"
              fill={null}
              fontFamily="sans-serif"
              fontSize={14}
              textAnchor="middle"
              x={15}
              y={11.5}
            >
              if
            </text>
            <rect
              fill="white"
              height={5}
              stroke="#000"
              width={5}
              x={22}
              y={-5}
            />
            <rect
              fill="white"
              height={5}
              stroke="#000"
              width={5}
              x={12.5}
              y={-5}
            />
            <rect
              fill="white"
              height={5}
              stroke="#000"
              width={5}
              x={3}
              y={-5}
            />
            <rect
              fill="black"
              height={5}
              stroke="#000"
              width={5}
              x={12.5}
              y={23}
            />
          </g>
          <g
            transform="translate(172.5 93)"
          >
            <rect
              fill="#fff"
              height={23}
              stroke="#000"
              strokeWidth={3}
              width={65}
            />
            <text
              alignmentBaseline="central"
              fill={null}
              fontFamily="sans-serif"
              fontSize={14}
              textAnchor="middle"
              x={32.5}
              y={11.5}
            >
              math/less
            </text>
            <rect
              fill="white"
              height={5}
              stroke="#000"
              width={5}
              x={37.5}
              y={-5}
            />
            <rect
              fill="white"
              height={5}
              stroke="#000"
              width={5}
              x={22.5}
              y={-5}
            />
            <rect
              fill="black"
              height={5}
              stroke="#000"
              width={5}
              x={30}
              y={23}
            />
          </g>
          <g
            transform="translate(165 40)"
          >
            <rect
              fill="#fff"
              height={23}
              stroke="#000"
              strokeWidth={3}
              width={65}
            />
            <text
              alignmentBaseline="central"
              fill={null}
              fontFamily="sans-serif"
              fontSize={14}
              textAnchor="middle"
              x={32.5}
              y={11.5}
            >
              std/const
            </text>
            <rect
              fill="black"
              height={5}
              stroke="#000"
              width={5}
              x={30}
              y={23}
            />
          </g>
          <g
            transform="translate(125 199)"
          >
            <rect
              fill="#fff"
              height={23}
              stroke="#000"
              strokeWidth={3}
              width={65}
            />
            <text
              alignmentBaseline="central"
              fill={null}
              fontFamily="sans-serif"
              fontSize={14}
              textAnchor="middle"
              x={32.5}
              y={11.5}
            >
              std/const
            </text>
            <rect
              fill="black"
              height={5}
              stroke="#000"
              width={5}
              x={30}
              y={23}
            />
          </g>
          <g
            transform="translate(25 199)"
          >
            <rect
              fill="#fff"
              height={23}
              stroke="#000"
              strokeWidth={3}
              width={85}
            />
            <text
              alignmentBaseline="central"
              fill={null}
              fontFamily="sans-serif"
              fontSize={14}
              textAnchor="middle"
              x={42.5}
              y={11.5}
            >
              math/multiply
            </text>
            <rect
              fill="white"
              height={5}
              stroke="#000"
              width={5}
              x={47.5}
              y={-5}
            />
            <rect
              fill="white"
              height={5}
              stroke="#000"
              width={5}
              x={32.5}
              y={-5}
            />
            <rect
              fill="black"
              height={5}
              stroke="#000"
              width={5}
              x={40}
              y={23}
            />
          </g>
          <g
            transform="translate(42.5 146)"
          >
            <rect
              fill="#fff"
              height={23}
              stroke="red"
              strokeWidth={3}
              width={35}
            />
            <text
              alignmentBaseline="central"
              fill="red"
              fontFamily="sans-serif"
              fontSize={14}
              textAnchor="middle"
              x={17.5}
              y={11.5}
            >
              fac
            </text>
            <rect
              fill="white"
              height={5}
              stroke="#000"
              width={5}
              x={15}
              y={-5}
            />
            <rect
              fill="black"
              height={5}
              stroke="#000"
              width={5}
              x={15}
              y={23}
            />
          </g>
          <g
            transform="translate(30 93)"
          >
            <rect
              fill="#fff"
              height={23}
              stroke="#000"
              strokeWidth={3}
              width={60}
            />
            <text
              alignmentBaseline="central"
              fill={null}
              fontFamily="sans-serif"
              fontSize={14}
              textAnchor="middle"
              x={30}
              y={11.5}
            >
              math/add
            </text>
            <rect
              fill="white"
              height={5}
              stroke="#000"
              width={5}
              x={35}
              y={-5}
            />
            <rect
              fill="white"
              height={5}
              stroke="#000"
              width={5}
              x={20}
              y={-5}
            />
            <rect
              fill="black"
              height={5}
              stroke="#000"
              width={5}
              x={27.5}
              y={23}
            />
          </g>
          <g
            transform="translate(20 40)"
          >
            <rect
              fill="#fff"
              height={23}
              stroke="#000"
              strokeWidth={3}
              width={65}
            />
            <text
              alignmentBaseline="central"
              fill={null}
              fontFamily="sans-serif"
              fontSize={14}
              textAnchor="middle"
              x={32.5}
              y={11.5}
            >
              std/const
            </text>
            <rect
              fill="black"
              height={5}
              stroke="#000"
              width={5}
              x={30}
              y={23}
            />
          </g>
        </g>
      </g>
    </g>
  </g>
</svg>
`;

exports[`multiple input ports to one output port 1`] = `
<svg
  height={208}
  width={160}
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    transform="scale(1) translate(1 1)"
  >
    <g>
      <g
        transform="translate(20 20)"
      >
        <rect
          fillOpacity={0}
          height={168}
          stroke="#000"
          strokeDasharray="10 5"
          strokeOpacity={0.5}
          strokeWidth={1}
          transform="translate(0.5 0.5)"
          width={120}
        />
        <text
          alignmentBaseline="hanging"
          fill={null}
          fontFamily="sans-serif"
          fontSize={14}
          opacity={0.5}
          x={5}
          y={5}
        >
          #cj64v13mt0002baluv27c5a65
        </text>
        <g>
          <path
            d="M 60.5 138 L 60.5 148 L 20 148 L 20 20 L 57.5 20 L 57.5 30"
            fill="none"
            opacity={0.8}
            stroke="#333333"
            strokeWidth={3}
          />
          <path
            d="M0,0 L0,3 L3,1.5 L0,0"
            fill="#333333"
            opacity={0.8}
            strokeWidth={3}
            transform="translate(62 30) rotate(90) scale(3)"
          />
        </g>
        <g>
          <path
            d="M 60.5 138 L 60.5 148 L 20 148 L 20 20 L 77.5 20 L 77.5 30"
            fill="none"
            opacity={0.8}
            stroke="#333333"
            strokeWidth={3}
          />
          <path
            d="M0,0 L0,3 L3,1.5 L0,0"
            fill="#333333"
            opacity={0.8}
            strokeWidth={3}
            transform="translate(82 30) rotate(90) scale(3)"
          />
        </g>
        <g
          transform="translate(35 45)"
        >
          <rect
            fillOpacity={0}
            height={88}
            stroke="#000"
            strokeDasharray="10 5"
            strokeOpacity={0.5}
            strokeWidth={1}
            transform="translate(0.5 0.5)"
            width={65}
          />
          <text
            alignmentBaseline="hanging"
            fill={null}
            fontFamily="sans-serif"
            fontSize={14}
            opacity={0.5}
            x={5}
            y={5}
          >
            cc
          </text>
          <g>
            <path
              d="M 25.5 88 L 25.5 38"
              fill="none"
              opacity={0.8}
              stroke="#333333"
              strokeWidth={3}
            />
            <path
              d="M0,0 L0,3 L3,1.5 L0,0"
              fill="#333333"
              opacity={0.8}
              strokeWidth={3}
              transform="translate(30 38) rotate(-90) scale(3)"
            />
          </g>
          <g>
            <path
              d="M 39.5 48 L 39.5 58 L 40.5 58 L 40.5 78"
              fill="none"
              opacity={0.8}
              stroke="#333333"
              strokeWidth={3}
            />
            <path
              d="M0,0 L0,3 L3,1.5 L0,0"
              fill="#333333"
              opacity={0.8}
              strokeWidth={3}
              transform="translate(45 78) rotate(90) scale(3)"
            />
          </g>
          <rect
            fill="white"
            height={5}
            stroke="#000"
            width={5}
            x={23}
            y={88}
          />
          <rect
            fill="black"
            height={5}
            stroke="#000"
            width={5}
            x={20}
            y={-5}
          />
          <rect
            fill="black"
            height={5}
            stroke="#000"
            width={5}
            x={40}
            y={-5}
          />
          <rect
            fill="black"
            height={5}
            stroke="#000"
            width={5}
            x={38}
            y={88}
          />
          <g
            transform="translate(20 20)"
          >
            <rect
              fill="#fff"
              height={23}
              stroke="#000"
              strokeWidth={3}
              width={25}
            />
            <text
              alignmentBaseline="central"
              fill={null}
              fontFamily="sans-serif"
              fontSize={14}
              textAnchor="middle"
              x={12.5}
              y={11.5}
            >
              a
            </text>
            <rect
              fill="white"
              height={5}
              stroke="#000"
              width={5}
              x={3}
              y={23}
            />
            <rect
              fill="black"
              height={5}
              stroke="#000"
              width={5}
              x={17}
              y={23}
            />
          </g>
        </g>
      </g>
    </g>
  </g>
</svg>
`;
